@@ -1,3 +1,10 @@
+2013-04-25 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
+
+	* agwpesocket.c, aprsis.c, beacon.c, cellmalloc.c, dprsgw.c,
+	  dupecheck.c, filter.c, historydb.c, keyhash.c, pbuf.c,
+	  telemetry.c, ttyreader.c:
+	    Coding style change: Use cmalloc() instead of malloc() + memset().
+
 2013-08-03 Frank Knobbe <frank@knobbe.us>
 
 	* interface.c:
